# HR-ETL

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
fastapi_server/: __init__.py  __main__.py  containers.py
fastapi_server/api/routers/: examples_router.py  index_router.py
fastapi_server/clients/: examples_client.py
fastapi_server/data_models/: example.py  health.py  info.py
fastapi_server/services/: examples_service.py
hr_etl/: __init__.py  __main__.py  config.yaml  constants.py  containers.py
hr_etl/clients/: extractor_client.py  mongodb_client.py  reader_client.py  storage_client.py
hr_etl/data_models/: employee.py  example.py  health.py  info.py  query.py
hr_etl/services/: etl_service.py
hr_etl/test_data/: employees_over_30_json_path.json
tests/: __init__.py
tests/integration/: conftest.py  docker-compose.yml  test_example_route.py  test_health_route.py  test_index_docs_routes.py
tests/test_data/: Input_json_file.json  employees_over_30_json_path.json
tests/unit/: test_shared_base_model.py
tests/unit/clients/: conftest.py  test_examples_client.py
tests/unit/services/: conftest.py  test_examples_service.py
