[tool.poetry]
name = "hr-erl"
version = "0.1.0"
description = ""
authors = ["atayziv <zivatay15@gmail.com>"]
readme = "README.md"
packages = [{include = "hr_erl"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
pytest-mock = "^3.14.0"
fastapi-camelcase = "^2.0.0"
dependency-injector = "^4.41.0"
pyyaml = "^6.0.1"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
